# aldrheim

./: .gitignore  Cargo.toml  build.zig  build.zig.zon  todo-list.md
src/: Renderer.zig  app.rs  asset_manager.rs  main.rs  main.zig  read_ext.rs  renderer.rs  scene.rs  xnb.rs
src/asset_manager/: vfx.rs
src/asset_manager/vfx/: continuous_emitter.rs  emitter.rs
src/renderer/: camera.rs  effect.rs  pipelines.rs
src/renderer/effect/: render_deferred_effect.rs
src/renderer/pipelines/: debug_point.rs  particles.rs  render_deferred_effect.rs  skymap.rs
src/scene/: level.rs  trigger.rs  vfx.rs
src/scene/vfx/: continuous_emitter.rs
src/shaders/: TexturedQuad.slang  debug_points.wgsl  particles.wgsl  render_deferred_effect.wgsl  shader.wgsl  skymap.wgsl
src/xnb/: Xnb.zig  asset.rs  asset.zig  reader_helpers.zig
src/xnb/asset/: AnimationClip.zig  BiTreeModel.zig  Color.zig  IndexBuffer.zig  LevelModel.zig  Model.zig  RenderDeferredEffect.zig  Texture2d.zig  Texture3d.zig  VertexBuffer.zig  VertexDeclaration.zig  additive_effect.rs  animation.rs  bi_tree_model.rs  color.rs  index_buffer.rs  level_model.rs  model.rs  render_deferred_effect.rs  render_deferred_liquid_effect.rs  texture_2d.rs  texture_3d.rs  vertex_buffer.rs  vertex_decl.rs
src/xnb/bcn/: bc1.zig  bc3.zig  common.zig
src/xnb/lzx/: BitBuffer.zig  LzxDecoder.zig  LzxState.zig
