[package]
name = "aldrheim"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argh = "0.1.13"
bcndecode = "0.2.0"
byteorder = "1.5.0"
glam = "0.30.8"
lzxd = "0.2.6"

image = { version = "0.25.8", default-features = false, features = ["png"] }
strum = { version = "0.27.2", features = ["derive"] }
